# aether-framework

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  ci.yml.bak
deployments/: Dockerfile.core  docker-compose.yml
docs/: installation.md
docs/modules/: README.md
modules/auto-pentest/: pyproject.toml
modules/chrome-ghost/: Cargo.toml
modules/chrome-ghost/src/: main.rs
modules/kernel-orchestra/: Cargo.toml
modules/neurospoit/: go.mod
modules/neurospoit/cmd/neurospoit/: main.go
modules/quantummapper/: pyproject.toml
modules/quantummapper/quantummapper/: engine.py
scripts/: setup.sh
src/: Cargo.toml  main.rs
src/core/: mod.rs
src/core/api_gateway/: mod.rs
src/core/data_lake/: mod.rs
src/core/orchestrator/: mod.rs
src/core/plugin_system/: mod.rs
src/core/security/: mod.rs
src/proto/: aether.proto  build.rs  modules.proto
src/utils/: mod.rs
