[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.10"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
