[tool.poetry]
name = "quantummapper"
version = "0.1.0"
description = "Intelligent application mapping for AETHER"
authors = ["Amir032-cyber"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
playwright = "^1.35.0"
networkx = "^3.1"
grpcio = "^1.56.0"
grpcio-tools = "^1.56.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
